--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material/menu": "^14.0.0",
+    "@rjsf/core": "^2.0.0",
     "@tanstack/react-query": "^4.33.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,8 +16,10 @@
     "antd": "^5.8.6",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "confetti-react": "^2.5.0",
     "formik": "^2.4.4",
     "formiojs": "^4.17.0",
+    "js-confetti": "^0.11.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
