--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material/menu": "^14.0.0",
-    "@rjsf/core": "^2.0.0",
+    "@rjsf/core": "^2.5.1",
     "@tanstack/react-query": "^4.33.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -26,9 +26,13 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.46.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-jsonschema-form": "^1.8.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "react-tippy": "^1.4.0",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.21.5",
     "sweetalert": "^2.1.2",
     "sweetalert-react": "^0.4.11",
     "sweetalert2": "^11.7.27",
