--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "confetti-react": "^2.5.0",
+    "cors": "^2.8.5",
     "formik": "^2.4.4",
     "formiojs": "^4.17.0",
     "js-confetti": "^0.11.0",
