--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/cssinjs": "^1.17.2",
     "@ant-design/icons": "^5.2.6",
-    "@formio/react": "^5.2.4-rc.1",
+    "@formio/react": "^5.3.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material/menu": "^14.0.0",
@@ -19,7 +20,7 @@
     "confetti-react": "^2.5.0",
     "cors": "^2.8.5",
     "formik": "^2.4.4",
-    "formiojs": "^4.17.0",
+    "formiojs": "^4.17.2",
     "js-confetti": "^0.11.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
