--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.8.6",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "bpmn-js": "^15.0.0",
     "confetti-react": "^2.5.0",
     "cors": "^2.8.5",
     "formik": "^2.4.4",
@@ -24,6 +25,7 @@
     "js-confetti": "^0.11.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-bpmn": "^0.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.46.0",
