--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "bpmn-js": "^15.0.0",
+    "chart.js": "^4.4.0",
     "confetti-react": "^2.5.0",
     "cors": "^2.8.5",
     "formik": "^2.4.4",
@@ -26,7 +27,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-bpmn": "^0.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.46.0",
     "react-infinite-scroll-component": "^6.1.0",
