--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-bootstrap": "^2.9.1",
     "react-bpmn": "^0.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-helmet": "^6.1.0",
